--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <title>Virtual Assistant By Ankit Billore</title>
     <link rel="shortcut icon" href="./Picsart_24-09-09_15-46-29-834.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
     rel="stylesheet"
 />
 </head>
 <body>
+    <div class=""></div>
     <div id="Main">
         <img id="robotimg" src="./Picsart_24-09-09_15-46-29-834.png" alt="">
         <h1 id="intro">Hi I'm <span id="Chitti">Chitti</span> Your <span id="virtual">Virtual Assistant</span></h1>
