--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 />
 </head>
 <body>
-    <div class=""></div>
+    <div class="Video h-[100vh] w-[100vw]  ">
+        <video autoplay loop muted class="h-[100%] w-[100%] object-cover overflow-hidden" src="./vecteezy_falling-snow-overlay-loop_49536082.mp4"></video>
+    </div>
     <div id="Main">
         <img id="robotimg" src="./Picsart_24-09-09_15-46-29-834.png" alt="">
         <h1 id="intro">Hi I'm <span id="Chitti">Chitti</span> Your <span id="virtual">Virtual Assistant</span></h1>
