--- a/index.html
+++ b/index.html
@@ -13,7 +13,23 @@
 />
 </head>
 <body>
-    <div class="Video h-[100vh] w-[100vw]  ">
+    <div class="Video h-[100vh] w-[100vw]">
+        <div class="Dcmt h-[6vh] w-[20vw] bg-red-300 absolute top-[1.5vw] right-[2vw] flex items-center justify-center gap-[2vw] text-[1.5vw] cursor-pointer z-[9999]"><h1>DOCUMENT</h1><h1 class="down"><i class=" ri-arrow-down-s-line"></i></h1></div>
+        <div class="data h-[70vh] w-[20vw] bg-green-300 absolute top-[1.5vw] right-[2vw] flex flex-col gap-[0.6vw] top-[4.5vw]   text-[1.5vw] cursor-pointer z-[99]">
+            <div class="Q1 border-b-2 border-black flex items-center pt-[1vw]"><h1>Q1. xxxxxx</h1></div>
+            <div class="Q1 border-b-2 border-black flex items-center"><h1>Q2. xxxxxx</h1></div>
+            <div class="Q1 border-b-2 border-black flex items-center"><h1>Q3. xxxxxx</h1></div>
+            <div class="Q1 border-b-2 border-black flex items-center"><h1>Q4. xxxxxx</h1></div>
+            <div class="Q1 border-b-2 border-black  flex items-center"><h1>Q5. xxxxxx</h1></div>
+            <div class="Q1 border-b-2 border-black flex items-center"><h1>Q6. xxxxxx</h1></div>
+            <div class="Q1 border-b-2 border-black flex items-center"><h1>Q7. xxxxxx</h1></div>
+            <div class="Q1 border-b-2 border-black flex items-center"><h1>Q8. xxxxxx</h1></div>
+            <div class="Q1 border-b-2 border-black flex items-center"><h1>Q9. xxxxxx</h1></div>
+            <div class="Q1 border-b-2 border-black flex items-center"><h1>Q10. xxxxxx</h1></div>
+
+
+           
+        </div>
         <video autoplay loop muted class="h-[100%] w-[100%] object-cover overflow-hidden" src="./vecteezy_falling-snow-overlay-loop_49536082.mp4"></video>
     </div>
     <div id="Main">
