--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
     rel="stylesheet"
 />
 </head>
-<body>
-    <div class="Video h-[100vh] w-[100vw]">
+<body class="overflow-hidden">
+    <div class="Video h-[100vh] w-[100vw] ">
         <div class="Dcmt h-[6vh] w-[20vw] bg-red-300 absolute top-[1.5vw] right-[2vw] flex items-center justify-center gap-[2vw] text-[1.5vw] cursor-pointer z-[9999]"><h1>DOCUMENT</h1><h1 class="down"><i class=" ri-arrow-down-s-line"></i></h1></div>
-        <div class="data h-[70vh] w-[20vw] bg-green-300 absolute top-[1.5vw] right-[2vw] flex flex-col gap-[0.6vw] top-[4.5vw]   text-[1.5vw] cursor-pointer z-[99] hidden">
-            <div class="Q1 border-b-2 border-black flex items-center pt-[1vw]"><h1>Q1. xxxxxx</h1></div>
-            <div class="Q1 border-b-2 border-black flex items-center"><h1>Q2. xxxxxx</h1></div>
-            <div class="Q1 border-b-2 border-black flex items-center"><h1>Q3. xxxxxx</h1></div>
-            <div class="Q1 border-b-2 border-black flex items-center"><h1>Q4. xxxxxx</h1></div>
-            <div class="Q1 border-b-2 border-black  flex items-center"><h1>Q5. xxxxxx</h1></div>
-            <div class="Q1 border-b-2 border-black flex items-center"><h1>Q6. xxxxxx</h1></div>
-            <div class="Q1 border-b-2 border-black flex items-center"><h1>Q7. xxxxxx</h1></div>
-            <div class="Q1 border-b-2 border-black flex items-center"><h1>Q8. xxxxxx</h1></div>
-            <div class="Q1 border-b-2 border-black flex items-center"><h1>Q9. xxxxxx</h1></div>
-            <div class="Q1 border-b-2 border-black flex items-center"><h1>Q10. xxxxxx</h1></div>
-            <div class="Q1  flex items-center"><h1>Q11. xxxxxx</h1></div>
+        <div class="data h-[70vh] w-[20vw] bg-white/20  absolute top-[1.5vw] right-[2vw] flex flex-col gap-[0.6vw] top-[4.5vw]   text-[1.5vw] cursor-pointer z-[99] hidden text-white ">
+            <div class="Q1 border-b-2 border-black    overflow-hidden  flex items-center pt-[1vw]"><h1 class="boxes">Q1. xxxxxx</h1></div>
+            <div class="Q1 border-b-2 border-black    overflow-hidden  flex items-center"><h1 class="boxes">Q2. xxxxxx</h1></div>
+            <div class="Q1 border-b-2 border-black    overflow-hidden  flex items-center"><h1 class="boxes">Q3. xxxxxx</h1></div>
+            <div class="Q1 border-b-2 border-black    overflow-hidden  flex items-center"><h1 class="boxes">Q4. xxxxxx</h1></div>
+            <div class="Q1 border-b-2 border-black    overflow-hidden   flex items-center"><h1 class="boxes">Q5. xxxxxx</h1></div>
+            <div class="Q1 border-b-2 border-black    overflow-hidden  flex items-center"><h1 class="boxes">Q6. xxxxxx</h1></div>
+            <div class="Q1 border-b-2 border-black    overflow-hidden  flex items-center"><h1 class="boxes">Q7. xxxxxx</h1></div>
+            <div class="Q1 border-b-2 border-black    overflow-hidden  flex items-center"><h1 class="boxes">Q8. xxxxxx</h1></div>
+            <div class="Q1 border-b-2 border-black    overflow-hidden  flex items-center"><h1 class="boxes">Q9. xxxxxx</h1></div>
+            <div class="Q1 border-b-2 border-black    overflow-hidden  flex items-center"><h1 class="boxes">Q10. xxxxxx</h1></div>
+            <div class="Q1  flex items-center   overflow-hidden"><h1 class="boxes">Q11. xxxxxx</h1></div>
 
 
 
@@ -43,7 +43,7 @@
         <button id="btn"><span><i class="ri-mic-2-line"></i></span><span id="content">Click Here To Ask</span></button>
     </div>
     
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
