--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
     <div class="Video h-[100vh] w-[100vw] ">
         <div class="Dcmt h-[7vh] w-[20vw] rounded-[0.8vw] bg-white/60 absolute top-[1.5vw] right-[2vw] flex items-center justify-center gap-[2vw] text-[1.7vw] font-semibold cursor-pointer z-[9999]"><h1>DOCUMENT</h1><h1 class="down"><i class=" ri-arrow-down-s-line"></i></h1></div>
         <div class="data h-[70vh] w-[20vw] bg-white/20 rounded-[0.8vw]  absolute top-[5.5vw]  right-[2vw] flex flex-col gap-[0.6vw] top-[4.5vw]   text-[1.5vw] cursor-pointer z-[99] hidden text-white ">
-            <div class="Q1 border-b-2 border-black  overflow-hidden  flex items-center pt-[1vw]"><h1 class="boxes">Q1. xxxxxx</h1></div>
-            <div class="Q1 border-b-2 border-black  overflow-hidden  flex items-center"><h1 class="boxes">Q2. xxxxxx</h1></div>
-            <div class="Q1 border-b-2 border-black  overflow-hidden  flex items-center"><h1 class="boxes">Q3. xxxxxx</h1></div>
-            <div class="Q1 border-b-2 border-black  overflow-hidden  flex items-center"><h1 class="boxes">Q4. xxxxxx</h1></div>
-            <div class="Q1 border-b-2 border-black  overflow-hidden   flex items-center"><h1 class="boxes">Q5. xxxxxx</h1></div>
-            <div class="Q1 border-b-2 border-black  overflow-hidden  flex items-center"><h1 class="boxes">Q6. xxxxxx</h1></div>
-            <div class="Q1 border-b-2 border-black  overflow-hidden  flex items-center"><h1 class="boxes">Q7. xxxxxx</h1></div>
-            <div class="Q1 border-b-2 border-black  overflow-hidden  flex items-center"><h1 class="boxes">Q8. xxxxxx</h1></div>
-            <div class="Q1 border-b-2 border-black  overflow-hidden  flex items-center"><h1 class="boxes">Q9. xxxxxx</h1></div>
-            <div class="Q1 border-b-2 border-black  overflow-hidden  flex items-center"><h1 class="boxes">Q10. xxxxxx</h1></div>
-            <div class="Q1  flex items-center   overflow-hidden"><h1 class="boxes">Q11. xxxxxx</h1></div>
+            <div class="Q1 border-b-2 border-black  overflow-hidden  flex items-center pt-[1vw]"><h1 class="boxes">Q1.Hello Chitti / Hi Chitti</h1></div>
+            <div class="Q1 border-b-2 border-black  overflow-hidden  flex items-center"><h1 class="boxes">Q2. Who Are You</h1></div>
+            <div class="Q1 border-b-2 border-black  overflow-hidden  flex items-center"><h1 class="boxes">Q3. How Are You</h1></div>
+            <div class="Q1 border-b-2 border-black  overflow-hidden  flex items-center"><h1 class="boxes">Q4. What Can You Do</h1></div>
+            <div class="Q1 border-b-2 border-black  overflow-hidden   flex items-center"><h1 class="boxes">Q5. Chitti Open Youtube</h1></div>
+            <div class="Q1 border-b-2 border-black  overflow-hidden  flex items-center"><h1 class="boxes">Q6. Chitti Open Instagram</h1></div>
+            <div class="Q1 border-b-2 border-black  overflow-hidden  flex items-center"><h1 class="boxes">Q7. Chitti Open LinkedIn</h1></div>
+            <div class="Q1 border-b-2 border-black  overflow-hidden  flex items-center"><h1 class="boxes">Q8. Chitti Open Facebook </h1></div>
+            <div class="Q1 border-b-2 border-black  overflow-hidden  flex items-center"><h1 class="boxes">Q9. Chitti Open WhatsApp</h1></div>
+            <div class="Q1 border-b-2 border-black  overflow-hidden  flex items-center"><h1 class="boxes">Q10. Ask Any Think.Chitti Search On Google. </h1></div>
+            <div class="Q1  flex items-center   overflow-hidden"><h1 class="boxes">Q11. </h1></div>
 
 
 
