--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="Video h-[100vh] w-[100vw] ">
         <div class="Dcmt h-[7vh] w-[20vw] rounded-[0.8vw] bg-white/60 absolute top-[1.5vw] right-[2vw] flex items-center justify-center gap-[2vw] text-[1.7vw] font-semibold cursor-pointer z-[9999]"><h1>DOCUMENT</h1><h1 class="down"><i class=" ri-arrow-down-s-line"></i></h1></div>
         <div class="data h-[70vh] w-[20vw] bg-white/20 rounded-[0.8vw]  absolute top-[5.5vw]  right-[2vw] flex flex-col gap-[0.6vw] top-[4.5vw]   text-[1.5vw] cursor-pointer z-[99] hidden text-white ">
-            <div class="Q1 border-b-2 border-black  overflow-hidden  flex items-center pt-[1vw]"><h1 class="boxes">Q1.Hello Chitti / Hi Chitti</h1></div>
+            <div class="Q1 border-b-2 border-black  overflow-hidden  flex items-center pt-[1vw]"><h1 class="boxes">Q1. Hello Chitti / Hi Chitti</h1></div>
             <div class="Q1 border-b-2 border-black  overflow-hidden  flex items-center"><h1 class="boxes">Q2. Who Are You</h1></div>
             <div class="Q1 border-b-2 border-black  overflow-hidden  flex items-center"><h1 class="boxes">Q3. How Are You</h1></div>
             <div class="Q1 border-b-2 border-black  overflow-hidden  flex items-center"><h1 class="boxes">Q4. What Can You Do</h1></div>
@@ -25,8 +25,8 @@
             <div class="Q1 border-b-2 border-black  overflow-hidden  flex items-center"><h1 class="boxes">Q7. Chitti Open LinkedIn</h1></div>
             <div class="Q1 border-b-2 border-black  overflow-hidden  flex items-center"><h1 class="boxes">Q8. Chitti Open Facebook </h1></div>
             <div class="Q1 border-b-2 border-black  overflow-hidden  flex items-center"><h1 class="boxes">Q9. Chitti Open WhatsApp</h1></div>
-            <div class="Q1 border-b-2 border-black  overflow-hidden  flex items-center"><h1 class="boxes">Q10. Ask Any Think.Chitti Search On Google. </h1></div>
-            <div class="Q1  flex items-center   overflow-hidden"><h1 class="boxes">Q11. </h1></div>   
+            <div class="Q1 border-b-2 border-black  overflow-hidden  flex items-center"><h1 class="boxes">Q10.Chitti Open Google. </h1></div>
+            <div class="Q1  flex items-center   overflow-hidden"><h1 class="boxes">Q11. Ask Any Think.Chitti Search On Google. </h1></div>   
         </div>
         <video autoplay loop muted class="h-[100%] w-[100%] object-cover overflow-hidden" src="./vecteezy_falling-snow-overlay-loop_49536082.mp4"></video>
     </div>
